--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=5000
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:${DB_HOST}/${DB_NAME}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/super-sprinter-exe
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
