--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=${DB_PASSWORD}
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.jpa.defer-datasource-initialization=true
